Fixed a few questions to be uniform with the rest of the survey

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -51,7 +51,7 @@
                     <br>
                     <br>
                     <div class="form-group">
-                        <label for="Statement3" class="font-weight-bold">3) I was born in the wrong era of music.</label>
+                        <label for="Statement3" class="font-weight-bold">3) You was born in the wrong era of music.</label>
                         <input type="range" class="custom-range" min="0" max="5" id="Statement3">
                         <span class="float-left">Strongly Disagree</span><span class="float-right">Strongly Agree</span>
                     </div>
@@ -100,7 +100,7 @@
                     <br>
                     <br>
                     <div class="form-group">
-                        <label for="Statement10" class="font-weight-bold">10) I like listening to Jimi Hendrix because he is a guitar god.</label>
+                        <label for="Statement10" class="font-weight-bold">10) You like listening to Jimi Hendrix because he is a guitar god.</label>
                         <input type="range" class="custom-range" min="0" max="5" id="Statement10">
                         <span class="float-left">Strongly Disagree</span><span class="float-right">Strongly Agree</span>
                     </div>
