Added additional instructions on how to grab an image URL

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -26,7 +26,7 @@
 
                 <form>
                     <p class="font-weight-bolder">About You</p>
-                    <p>Please fill in your name and provide a URL to a profile picture of your choice.</p>
+                    <p>Please fill in your name and provide a URL to a profile picture of your choice. To get a profile picture URL, you can go to any social media site that has your profile picture, right-click on the picture, and then click "Copy image address."</p>
                     <hr>
                     <div class="form-group">
                         <label for="inputName">Name (Required)</label>
