Changed wording of a question

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -43,7 +43,7 @@
                     <hr>
                     <br>
                     <div class="form-group">
-                        <label for="Statement1" class="font-weight-bold">1) "I'ma let you finish, but Beyoncé had one of the best videos of all time!"</label>
+                        <label for="Statement1" class="font-weight-bold">1) EDM is love, EDM is life.</label>
                         <input type="range" class="custom-range" min="0" max="5" id="Statement1">
                         <span class="float-left">Strongly Disagree</span><span class="float-right">Strongly Agree</span>
                     </div>
