--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -130,18 +130,18 @@
 
 </html>
 
-<!-- Submit button on click
+<script type="text/javascript">
+// Submit button on click
 
-    create new object to store data from name, image url, and answers
-        answers can be its own object, structured so that the key is the statement and value is the score
-            statement1: x
-            statement2: y
-            statement3: z
+//     create new object to store data from name, image url, and answers
+//         answers should be an array
 
-    $.post data to /api/friends
-        callback: 
-            return the person most similar to the person we just sent to API.
-            Person should then populate in modal.
+//     $.post data to /api/friends
+//         callback: 
+//             return the person most similar to the person we just sent to API.
+//             Person should then populate in modal.
 
-    clear form after submission -->
+//     clear form after submission
+
+</script>
 
