--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -215,7 +215,7 @@ $("#submit-button").on("click", function() {
             $("#match-img").attr("src", data.photo);
 
             // Show the modal with the best match
-            $("#resultsModal").modal("toggle");
+            $("#resultsModal").modal();
 
         });
 
