Fixed spelling error

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -58,7 +58,7 @@
                     <br>
                     <br>
                     <div class="form-group">
-                        <label for="Statement3" class="font-weight-bold">3) You was born in the wrong era of music.</label>
+                        <label for="Statement3" class="font-weight-bold">3) You were born in the wrong era of music.</label>
                         <input type="range" class="custom-range" min="0" max="5" id="Statement3">
                         <span class="float-left">Strongly Disagree</span><span class="float-right">Strongly Agree</span>
                     </div>
